- Search requests now require four to twenty characters. - Fixed border issues. - Fixed div nesting with footer. - Fixed disappearing error / no result message. - Removed useless no query check on the display all query (only case no would display is if no characters existed). - Fixed other various things. - Made requirement text on items more readable.
git-svn-id: https://subversion.assembla.com/svn/mapler-me@873 7cbc8f23-9b70-4854-b091-be65f742de0c

--- a/trunk/website/inc/css/style.player.css
+++ b/trunk/website/inc/css/style.player.css
@@ -443,7 +443,7 @@ hr {
 	height: 90px;
 	margin-left: 20px;
 	overflow: hidden;
-	font-size: 9px;
+	font-size: 11px;
 	margin-bottom: 10px;
 }
 #item_info .item_req_stats > table {
